--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@saltswap/contracts",
+  "name": "@boazswap/contracts",
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
